# TaskMasterRust

./: .replit  Cargo.toml  index.html
src/: app.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs  server.rs
src/components/: engineer_filter.rs  header.rs  mod.rs  scheduler.rs  task_form.rs  task_row.rs
src/database/: mod.rs  operations.rs  schema.rs
src/models/: engineer.rs  mod.rs  task.rs
src/utils/: date_utils.rs
static/: style.css
