[package]
name = "task_scheduler"
version = "0.6.0"
edition = "2021"
description = "Планировщик заявок для инженеров"

[dependencies]
# Dioxus library
dioxus = "0.4"
dioxus-web = "0.4"
dioxus-router = "0.4"

# Web essentials
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Navigator", "Storage"] }
js-sys = "0.3"
gloo = "0.8"
gloo-console = "0.2"

# API server
axum = { version = "0.6", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Asynchronous
futures = "0.3"
async-trait = "0.1"

# Logging
log = "0.4"
env_logger = "0.10"

# Extra utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
once_cell = "1.18"
parking_lot = "0.12"
getrandom = { version = "0.2", features = ["js"] }
