[package]
name = "task_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
axum = "0.7.4"
gloo-console = "0.3.0"
web-sys = { version = "0.3.66", features = ["Storage"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1